# todo-api

./: .env.template  .gitignore  LICENSE  README.md  coverage.ini  mypy.ini  pyproject.toml  pytest.ini
src/: main.py  service_locator.py
src/api/: __init__.py  api.py  exceptions.py  response.py
src/api/routes/: __init__.py  auth.py  todos.py
src/auth/: __init__.py
src/auth/adapter/: __init__.py  sqlalchemy_user_repository.py
src/auth/domain/: __init__.py  password_hash_service.py  token.py  token_service.py  user.py  user_repository.py  user_service.py
src/auth/service/: __init__.py  bcrypt_password_hash_service.py  jwt_token_service.py  sqlalchemy_user_service.py
src/core/: __init__.py
src/core/adapter/: __init__.py  bcrypt_password_hash.py  db_schema.py  environ_config.py  jwt_adapter.py  logger.py  sqlalchemy_unit_of_work.py  sqlalchemy_user_repo.py
src/core/domain/: __init__.py  config.py  exception.py  frequency_db_name.py  password_hash.py  todo_category.py  token_adapter.py  unit_of_work.py  user.py  user_repo.py  user_service.py  value_object.py
src/core/service/: __init__.py  sqlalchemy_user_service.py
src/todo/: __init__.py
src/todo/adapter/: __init__.py  sqlalchemy_todo_repository.py
src/todo/domain/: __init__.py  frequency.py  holidays.py  month.py  todo.py  todo_repository.py  todo_service.py  weekday.py
src/todo/service/: __init__.py  sqlalchemy_todo_service.py
test/: conftest.py
test/api/routes/: test_auth.py  test_todos.py
test/test_utils/: sa_test_utils.py
tests/integration/: test_sqlalchemy_user_repo.py
(+17 files in other folders)
